cpu/include/qe6502/qe6502_abi.h

typedef uint8_t qe6502abi_snapshot_t[QE6502_ABI_SNAPSHOT_SIZE];
/*
 * ---------------------------------------------------------------------------
 * ABI context storage
 * ---------------------------------------------------------------------------
 *
 * Opaque 64-byte, 8-byte-aligned caller-owned context. The used bytes contain
 * private ABI state; the remaining bytes are reserved and must not be edited.
 */
typedef struct qe6502abi_context
{
    QE6502_ABI_ALIGNAS(QE6502_ABI_CONTEXT_ALIGN)
    uint8_t bytes[QE6502_ABI_CONTEXT_SIZE];
} qe6502abi_context_t;
typedef uint32_t qe6502abi_tick_t;
/*
 * ---------------------------------------------------------------------------
 * ABI entry points
 * ---------------------------------------------------------------------------
 *
 * Shared/WASM/FFI functions for versioning, CPU execution, interrupt pins,
 * snapshots, and scalar CPU-state access through the opaque ABI context.
 */

/* ABI version. */
QE6502_ABI_API uint32_t qe6502abi_version(void);
/* Initialize an ABI context for the selected processor model. */
QE6502_ABI_API void qe6502abi_setup(qe6502abi_context_t *ctx, uint32_t model);
/* Restart the CPU context and return an initial dummy read request at address 0x00ff. */
QE6502_ABI_API qe6502abi_tick_t qe6502abi_restart(qe6502abi_context_t *ctx);
/* Enter execution at address and return the first bus request. */
QE6502_ABI_API qe6502abi_tick_t qe6502abi_goto(qe6502abi_context_t *ctx, uint32_t address);
/* Execute one CPU bus phase and return the next packed bus request. */
QE6502_ABI_API qe6502abi_tick_t qe6502abi_tick(qe6502abi_context_t *ctx, uint32_t bus);
/* Interrupt pin control. */
QE6502_ABI_API void    qe6502abi_nmi_assert(qe6502abi_context_t *ctx, uint8_t assert_nmi);
QE6502_ABI_API void    qe6502abi_irq_assert(qe6502abi_context_t *ctx, uint8_t assert_irq);
QE6502_ABI_API uint8_t qe6502abi_is_nmi_asserted(const qe6502abi_context_t *ctx);
QE6502_ABI_API uint8_t qe6502abi_is_irq_asserted(const qe6502abi_context_t *ctx);
/* Save and restore a portable 64-byte ABI snapshot. */
QE6502_ABI_API void             qe6502abi_save(const qe6502abi_context_t *ctx, qe6502abi_tick_t tick, qe6502abi_snapshot_t snapshot);
QE6502_ABI_API qe6502abi_tick_t qe6502abi_load(qe6502abi_context_t *ctx, const qe6502abi_snapshot_t snapshot);
/* CPU register accessors. */
QE6502_ABI_API uint32_t qe6502abi_get_model(const qe6502abi_context_t *ctx);
QE6502_ABI_API void     qe6502abi_set_model(qe6502abi_context_t *ctx, uint32_t value);
QE6502_ABI_API uint32_t qe6502abi_get_pc(const qe6502abi_context_t *ctx);
QE6502_ABI_API void     qe6502abi_set_pc(qe6502abi_context_t *ctx, uint32_t value);
QE6502_ABI_API uint32_t qe6502abi_get_s(const qe6502abi_context_t *ctx);
QE6502_ABI_API void     qe6502abi_set_s(qe6502abi_context_t *ctx, uint32_t value);
QE6502_ABI_API uint32_t qe6502abi_get_a(const qe6502abi_context_t *ctx);
QE6502_ABI_API void     qe6502abi_set_a(qe6502abi_context_t *ctx, uint32_t value);
QE6502_ABI_API uint32_t qe6502abi_get_x(const qe6502abi_context_t *ctx);
QE6502_ABI_API void     qe6502abi_set_x(qe6502abi_context_t *ctx, uint32_t value);
QE6502_ABI_API uint32_t qe6502abi_get_y(const qe6502abi_context_t *ctx);
QE6502_ABI_API void     qe6502abi_set_y(qe6502abi_context_t *ctx, uint32_t value);
QE6502_ABI_API uint32_t qe6502abi_get_p(const qe6502abi_context_t *ctx);
QE6502_ABI_API void     qe6502abi_set_p(qe6502abi_context_t *ctx, uint32_t value);